refactor code of StudentController